--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -82,7 +82,7 @@
                         {% if node.publication_group_multimedia_photo_extra_content %}
                         {% if node.publication_group_multimedia_photo_extra_content.video %}
                         {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
-                        {% video my_video "medium" %}
+                        {% video my_video "100% x 100%" %}
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
@@ -143,7 +143,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;"></textarea>
+                        style="height: 10.9969px;">{{ node.content }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
