--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -138,7 +138,7 @@
                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                             {% if node.group_extra_content.video %}
                                                 {% video node.group_extra_content.video as my_video %}
-                                                {% video my_video "medium" %}
+                                                {% video my_video "100% x 100%" %}
                                                 {% endvideo %}
                                             {% else %}
                                                 <div class="card small">
@@ -207,7 +207,7 @@
                                                           placeholder="Escribe el contenido del nuevo mensaje"
                                                           id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                           name="content" rows="10" required="required"
-                                                          style="height: 11px;"></textarea>
+                                                          style="height: 11px;">{{ node.content }}</textarea>
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
