--- a/photologue_groups/templates/photologue_groups/new_reply.html
+++ b/photologue_groups/templates/photologue_groups/new_reply.html
@@ -9,7 +9,7 @@
                     <div class="input-field col s12">
                         <textarea class="materialize-textarea message-reply" id="message-reply-{{ node.pk }}" cols="40"
                                   maxlength="500" name="content"
-                                  placeholder="Responder a @{{ node.p_author }}" rows="10" required=""></textarea>
+                                  placeholder="Responder a @{{ node.author }}" rows="10" required=""></textarea>
                         <label for="message-reply-{{ node.pk }}">Escribe tu mensaje aqui...</label>
                     </div>
                     <div class="file-field input-field col s12">
