--- a/photologue_groups/templates/photologue_groups/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/publication_detail.html
@@ -80,7 +80,7 @@
                                             {% for image in images %}
                                                 {% if image.image %}
                                                 <div class="col s4 z-depth-2">
-                                                    <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                    <img class="materialboxed responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                 </div>
                                                 {% endif %}
                                             {% endfor %}
@@ -102,24 +102,24 @@
                                             </div>
                                         {% endif %}
                                     {% endwith %}
-                                    {% if node.publication_photo_extra_content %}
+                                    {% if node.publication_group_multimedia_photo_extra_content %}
                                         {% comment %} Para publicaciones con URL {% endcomment %}
-                                        {% if node.publication_photo_extra_content.video %}
-                                            {% video node.publication_photo_extra_content.video as my_video %}
-                                               {% video my_video "medium" %}
+                                        {% if node.publication_group_multimedia_photo_extra_content.video %}
+                                            {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
+                                               {% video my_video "100% x 100%" %}
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                                <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
+                                                        {% if node.publication_group_multimedia_photo_extra_content.image %}{{ node.publication_group_multimedia_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                <span class="card-title white-text">{{ node.publication_group_multimedia_photo_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
-                                                <p>{{ node.publication_photo_extra_content.description }}</p>
+                                                <p>{{ node.publication_group_multimedia_photo_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
+                                                <a href="{{ node.publication_group_multimedia_photo_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
@@ -163,7 +163,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;"></textarea>
+                                                              style="height: 10.9969px;">{{ node.content }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
