--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -60,7 +60,7 @@
                             {% for image in images %}
                                 {% if image.image %}
                             <div class="col s4 z-depth-2 center">
-                                <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                <img class="materialboxed responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                                 {% endif %}
                             {% endfor %}
@@ -83,14 +83,13 @@
                         {% if node.publication_group_multimedia_video_extra_content %}
                         {% if node.publication_group_multimedia_video_extra_content.video %}
                         {% video node.publication_group_multimedia_video_extra_content.video as my_video %}
-                        {% video my_video "medium" %}
+                        {% video my_video "100% x 100%" %}
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}{% endif %}">
-" %}{% endif %}">
+                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
                                 <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
@@ -145,7 +144,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;"></textarea>
+                        style="height: 10.9969px;">{{ node.content }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
