--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -111,7 +111,7 @@
                                             {% for image in images %}
                                                 {% if image.image %}
                                                 <div class="col s4 z-depth-2">
-                                                    <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
+                                                    <img class="materialboxed responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                                                 </div>
                                                 {% endif %}
                                             {% endfor %}
@@ -137,7 +137,7 @@
                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                         {% if node.publication_group_multimedia_video_extra_content.video %}
                                             {% video node.publication_group_multimedia_video_extra_content.video as my_video %}
-                                               {% video my_video "medium" %}
+                                               {% video my_video "100% x 100%" %}
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
@@ -194,7 +194,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;"></textarea>
+                                                              style="height: 10.9969px;">{{ node.content }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
