--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -104,7 +104,7 @@
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  node.shared_publication.extra_content.video %}
                                                                 {% video node.shared_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -188,7 +188,7 @@
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  node.shared_group_publication.extra_content.video %}
                                                                 {% video node.shared_group_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -250,7 +250,7 @@
                                         {% if node.extra_content %}
                                             {% if node.extra_content.video %}
                                                 {% video node.extra_content.video as my_video %}
-                                                {% video my_video "medium" %}
+                                                {% video my_video "100% x 100%" %}
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
@@ -326,7 +326,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 11px;"></textarea>
+                                                              style="height: 11px;">{{ node.content }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
