--- a/skyfolk/templates/channels/new_feed_publication.html
+++ b/skyfolk/templates/channels/new_feed_publication.html
@@ -69,7 +69,7 @@
                                 {% comment %} Para publicaciones con URL {% endcomment %}
                                 {% if  item.shared_publication.extra_content.video %}
                                     {% video item.shared_publication.extra_content.video as my_video %}
-                                    {% video my_video "300x100" %}
+                                    {% video my_video "100% x 100%" %}
                                     {% endvideo %}
                                 {% else %}
                                     <div class="card small">
@@ -127,7 +127,7 @@
             {% if item.extra_content %}
                 {% if item.extra_content.video %}
                     {% video item.extra_content.video as my_video %}
-                    {% video my_video "300x100" %}
+                    {% video my_video "100% x 100%" %}
                     {% endvideo %}
                 {% else %}
                     {% comment %} Para publicaciones con URL {% endcomment %}
