--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -79,7 +79,7 @@
                                 {% if node.group_extra_content %}
                                     {% if node.group_extra_content.video %}
                                         {% video node.group_extra_content.video as my_video %}
-                                        {% video my_video "medium" %}
+                                        {% video my_video "100% x 100%" %}
                                         {% endvideo %}
                                     {% else %}
                                         {% comment %} Para publicaciones con URL {% endcomment %}
@@ -158,7 +158,7 @@
                                                           placeholder="Escribe el contenido del nuevo mensaje"
                                                           id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                           name="content" rows="10" required="required"
-                                                          style="height: 11px;"></textarea>
+                                                          style="height: 11px;">{{ node.content }}</textarea>
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
