--- a/skyfolk/templates/channels/new_photo_group_publication_detail.html
+++ b/skyfolk/templates/channels/new_photo_group_publication_detail.html
@@ -1,4 +1,4 @@
-rf{% load decorators %}
+{% load decorators %}
 {% load avatar_tags %}
 {% load app_filters %}
 {% load humanize %}
@@ -71,24 +71,24 @@ rf{% load decorators %}
                             </div>
                             {% endif %}
                             {% endwith %}
-                            {% if node.publication_photo_extra_content %}
+                            {% if node.publication_group_multimedia_photo_extra_content %}
                                         {% comment %} Para publicaciones con URL {% endcomment %}
-                                        {% if node.publication_photo_extra_content.video %}
-                                            {% video node.publication_photo_extra_content.video as my_video %}
-                                               {% video my_video "medium" %}
+                                        {% if node.publication_group_multimedia_photo_extra_content.video %}
+                                            {% video node.publication_group_multimedia_photo_extra_content.video as my_video %}
+                                               {% video my_video "100% x 100%" %}
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_photo_extra_content.image %}{{ node.publication_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                                <span class="card-title white-text">{{ node.publication_photo_extra_content.title }}</span>
+                                                        {% if node.publication_group_multimedia_photo_extra_content.image %}{{ node.publication_group_multimedia_photo_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                                <span class="card-title white-text">{{ node.publication_group_multimedia_photo_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
-                                                <p>{{ node.publication_photo_extra_content.description }}</p>
+                                                <p>{{ node.publication_group_multimedia_photo_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a href="{{ node.publication_photo_extra_content.url }}">Ver</a>
+                                                <a href="{{ node.publication_group_multimedia_photo_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
@@ -136,7 +136,7 @@ rf{% load decorators %}
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;"></textarea>
+                                                              style="height: 10.9969px;">{{ node.content }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
