--- a/skyfolk/templates/channels/new_video_group_publication.html
+++ b/skyfolk/templates/channels/new_video_group_publication.html
@@ -1,12 +1,9 @@
-{% load photo_publications_tags %}
+{% load decorators %}
+{% load avatar_tags %}
 {% load app_filters %}
 {% load humanize %}
-{% load avatar_tags %}
-{% load mptt_tags %}
 {% load embed_video_tags %}
-{% load group_utils %}
 {% load static %}
-{% for node in publications %}
 <div class="row infinite-item">
     <div class="col s12">
         <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
@@ -16,19 +13,17 @@
             data-delay="50"
             data-tooltip="Ver conversación completa"><i class="material-icons md-18">open_in_new</i></span>
             {% if user.id == node.author.id %}
-            {% if node.event_type == 1 or node.event_type == 3 %}
             <span data-id="{{ node.pk }}"
             class="top-options edit-comment tooltipped"
             data-position="bottom"
             data-delay="50"
             data-tooltip="Editar comentario"><i class="material-icons md-18">mode_edit</i></span>
             {% endif %}
-            {% endif %}
             <div class="row">
                 <div class="articulo col s12">
                     <div class="row">
                         <div class="image col l1 m2 s2"
-                        {% if   user.id == node.author.id %}title="¡Eres el autor!"
+                        {% if user.id == node.author.id %}title="¡Eres el autor!"
                         style="box-shadow: 0 1px 5px rgba(129, 199, 132, 1);"{% endif %}>
                         <div class="usr-img img-responsive">{% avatar node.author %}</div>
                     </div>
@@ -56,7 +51,7 @@
                         <div class="row images">
                             {% for image in images %}
                                 {% if image.image %}
-                            <div class="col l9 s12 z-depth-2 center">
+                            <div class="col s4 z-depth-2 center">
                                 <img class="materialboxed responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.author }}" title="Imagen de: {{ node.author }}">
                             </div>
                                 {% endif %}
@@ -68,8 +63,8 @@
                         {% if videos %}
                         <div class="row videos">
                            {% for video in videos %}
-                               {% if video.video %}
-                           <div class="col l9 s12 z-depth-2 center">
+                                {% if video.video %}
+                           <div class="col s4 z-depth-2 center">
                             <video class="responsive-video" controls loop>
                                 <source src="{{ video.video.url }}" type="video/mp4">
                                 </video>
@@ -79,23 +74,23 @@
                         </div>
                         {% endif %}
                         {% endwith %}
-                        {% if node.publication_video_extra_content %}
-                        {% if node.publication_video_extra_content.video %}
-                        {% video node.publication_video_extra_content.video as my_video %}
+                        {% if node.publication_group_multimedia_video_extra_content %}
+                        {% if node.publication_group_multimedia_video_extra_content.video %}
+                        {% video node.publication_group_multimedia_video_extra_content.video as my_video %}
                         {% video my_video "100% x 100%" %}
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_video_extra_content.image %}{{ node.publication_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
-                                <span class="card-title white-text">{{ node.publication_video_extra_content.title }}</span>
+                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{% static "dist/img/nuevo_back.png" %}{% endif %}">
+                                <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
-                                <p>{{ node.publication_video_extra_content.description }}</p>
+                                <p>{{ node.publication_group_multimedia_video_extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a href="{{ node.publication_video_extra_content.url }}">Ver</a>
+                                <a href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
@@ -115,13 +110,13 @@
                     </li>
                     {% endif %}
                     {% comment %} Si el usuario esta logueado {% endcomment %}
-                    <li title="No me gusta" class="hate-comment"{% if node.have_hate %} style="color: rgb(186, 104, 200);"{% endif %}>
+                    <li title="No me gusta" class="hate-comment">
                         <i class="material-icons md-18">keyboard_arrow_down</i>
-                        <i class="hate-value">{{ node.hates|zero_to_empty }}</i>
+                        <i class="hate-value"></i>
                     </li>
-                    <li title="¡Me gusta!" class="like-comment" {% if node.have_like %}style="color: rgb(240, 98, 146);"{% endif %}>
+                    <li title="¡Me gusta!" class="like-comment">
                         <i class="material-icons md-18">keyboard_arrow_up</i>
-                        <i class="like-value">{{ node.likes|zero_to_empty }}</i>
+                        <i class="like-value"></i>
                     </li>
                         <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}"><i class="material-icons md-18">reply</i>
                      </li>
@@ -184,7 +179,8 @@
 </div>
 </div>
 </div>
-{% endfor %}
-{% if publications.has_next %}
-<a id="load-comments" class="waves-effect waves-light btn-large blue darken-1 white-text center" href="?page={{ publications.next_page_number }}">Cargar comentarios</a>
-{% endif %}
+<script>
+    $(document).ready(function () {
+        $('.materialboxed').materialbox();
+    });
+</script>
