--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -76,7 +76,7 @@
                                         {% comment %} Para publicaciones con URL {% endcomment %}
                                         {% if pub.theme_extra_content.video %}
                                             {% video pub.theme_extra_content.video as my_video %}
-                                            {% video my_video "medium" %}
+                                            {% video my_video "100% x 100%" %}
                                             {% endvideo %}
                                         {% else %}
                                             <div class="card small">
@@ -138,7 +138,7 @@
                                                                   placeholder="Escribe el contenido del nuevo mensaje"
                                                                   id="id_caption-{{ pub.pk }}" cols="40" maxlength="500"
                                                                   name="content" rows="10" required="required"
-                                                                  style="height: 11px;"></textarea>
+                                                                  style="height: 11px;">{{ pub.content }}</textarea>
                                                         <label for="id_caption-{{ pub.pk }}">Editar comentario</label>
                                                     </div>
                                                     <div class="row">
