--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -210,7 +210,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  node.shared_publication.extra_content.video %}
                                                                 {% video node.shared_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -290,7 +290,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  item.object.shared_group_publication.extra_content.video %}
                                                                 {% video item.object.shared_group_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -338,7 +338,7 @@ Template para las busquedas
                                         {% if item.object.extra_content %}
                                             {% if item.object.extra_content.video %}
                                                 {% video item.object.extra_content.video as my_video %}
-                                                    {% video my_video "medium" %}
+                                                    {% video my_video "100% x 100%" %}
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
@@ -562,7 +562,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  node.shared_publication.extra_content.video %}
                                                                 {% video node.shared_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -642,7 +642,7 @@ Template para las busquedas
                                                             {% comment %} Para publicaciones con URL {% endcomment %}
                                                             {% if  item.object.shared_group_publication.extra_content.video %}
                                                                 {% video item.object.shared_group_publication.extra_content.video as my_video %}
-                                                                {% video my_video "medium" %}
+                                                                {% video my_video "100% x 100%" %}
                                                                 {% endvideo %}
                                                             {% else %}
                                                                 <div class="card small">
@@ -690,7 +690,7 @@ Template para las busquedas
                                         {% if item.object.extra_content %}
                                             {% if item.object.extra_content.video %}
                                                 {% video item.object.extra_content.video as my_video %}
-                                                    {% video my_video "medium" %}
+                                                    {% video my_video "100% x 100%" %}
                                                 {% endvideo %}
                                             {% else %}
                                                 {% comment %} Para publicaciones con URL {% endcomment %}
