+ comentarios por orden de tiempo

--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -237,6 +237,12 @@
         },
         onAfterPageLoad: function() {
             $('.loading_skyline').hide();
+            $('div[id^="pub-"]').each(function (i) {
+                var div = $('[id="' + this.id + '"]').slice(1).remove();
+                $('div[id^="pub-"]').each(function (i) {
+                    var div = $('[id="' + this.id + '"]').slice(1).remove();
+                });
+            });
         }
     });
     </script>
