--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -8,7 +8,7 @@
         <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
             <div class="col s12">
                 <div class="col s12 wrapper"
-                     {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
+                     {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
@@ -178,7 +178,7 @@
                     <div class="wrapper-reply">
                         {% include "groups/new_reply.html" %}
                     </div>
-                    {% if not node.is_leaf_node %}
+                    {% if node.level == 0 %}
                         <ul class="children">
                             {{ children }}
                         </ul>
