--- a/skyfolk/templates/groups/board_theme_publications.html
+++ b/skyfolk/templates/groups/board_theme_publications.html
@@ -7,9 +7,8 @@
 {% for pub in publications %}
                 <div id="pub-{{ pub.id }}" class="col s12 infinite-item">
                     <div class="row">
-                        <div class="col wrapper{% if pub.level == 0 %} col push-l1 l9 s12 {% else %}  push-l2 l9 m10 s11{% endif %}"
-                             data-id="{{ pub.pk }}" {% if pub.parent %}data-parent="{{ pub.parent.id }}"{% endif %}
-                             {% if pub.level > 0 %}style="border-right: 2px solid #1e88e5;"{% endif %}>
+                        <div class="col wrapper push-l2 l9 m10 s11"
+                             data-id="{{ pub.pk }}" {% if pub.parent %}data-parent="{{ pub.parent.id }}"{% endif %}>
                             {% if user.id == pub.author.id %}
                                 <span data-id="{{ pub.pk }}"
                                       class="top-options edit-comment tooltipped"
