--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -165,7 +165,8 @@
 <div class="wrapper-reply">
     {% include "photologue/new_reply.html" %}
 </div>
-{% if not node.is_leaf_node %}
+{% if node.level == 0 %}
+    <ul class="children"></ul>
 <div class="row">
     <div class="col s12">
         {% if node.level < 2 %}
