--- a/photologue_groups/templates/photologue_groups/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/ajax_load_replies.html
@@ -15,7 +15,7 @@
 <div class="row infinite-item">
     <div class="col s12">
         <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
-        {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
+        {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
             data-delay="50"
@@ -166,7 +166,8 @@
 <div class="wrapper-reply">
     {% include "photologue_groups/new_reply.html" %}
 </div>
-{% if not node.is_leaf_node %}
+{% if node.level == 0%}
+<ul class="children"></ul>
 <div class="row">
     <div class="col s12">
         {% if node.level < 2 %}
