--- a/skyfolk/templates/channels/new_publication.html
+++ b/skyfolk/templates/channels/new_publication.html
@@ -5,9 +5,7 @@
 {% load embed_video_tags %}
 {% load static %}
 <div class="row {% if node.level == 0 %}infinite-item wrapper{% endif %}" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
-    <div class="col s12">
-        <div class="col s12 {% if node.level > 0 %}wrapper{% endif %}""
-        {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
+        <div class="wrapper">
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
@@ -269,7 +267,6 @@
                             </div>
                         </div>
                     {% endif %}
-</div>
 </div>
 </div>
 <script>
