--- a/dash/contrib/plugins/image/templates/image/render.html
+++ b/dash/contrib/plugins/image/templates/image/render.html
@@ -4,18 +4,18 @@
         <div class="wrapper">
             <div class="widget-wr">
                 <div class="row widget-title blue white-text">
-                    <div class="col s12">
                         <h4 class="flow-text">{{ plugin.data.title }} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a></h4>
                     </div>
                 </div>
                 {% if plugin.data.show_link %}
-                <a href="{{ plugin.data.image }}" title="{{ plugin.data.title }}">
+                <div class="center">
+                <a href="{{ image.image.url }}" title="{{ plugin.data.title }}">
                 {% endif %}
-                    {% if plugin.data.image %}
+                    {% if image.image  %}
                         {% if crop %}
-                            {% thumbnail plugin.data.image thumb_size crop=crop as im %}
+                            {% thumbnail image.image  thumb_size crop=crop as im %}
                         {% else %}
-                            {% thumbnail plugin.data.image thumb_size as im %}
+                            {% thumbnail image.image  thumb_size as im %}
                         {% endif %}
                         <img src="{{ im.url }}" alt="{{ plugin.data.title }}"/>
                     {% else %}
@@ -23,8 +23,8 @@
                     {% endif %}
                 {% if plugin.data.show_link %}
                 </a>
+            </div>
                 {% endif %}
             </div>
-        </div>
     </div>
 </div>
