--- a/photologue/templates/photologue/ajax_load_replies.html
+++ b/photologue/templates/photologue/ajax_load_replies.html
@@ -13,8 +13,7 @@
 
 {% for node in publications %}
 <div class="row infinite-item">
-    <div class="col s12">
-        <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
+        <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
         {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
@@ -188,7 +187,6 @@
     </div>
 </div>
 {% endif %}
-</div>
 </div>
 </div>
 {% endfor %}
