--- a/photologue_groups/templates/photologue_groups/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/ajax_load_replies.html
@@ -13,9 +13,7 @@
 
 {% for node in publications %}
 <div class="row infinite-item">
-    <div class="col s12">
-        <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
-        {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
+        <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
             data-delay="50"
