--- a/photologue_groups/templates/photologue_groups/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/publications_entries.html
@@ -8,9 +8,7 @@
 {% load static %}
 {% for node in publications %}
 <div class="row infinite-item">
-    <div class="col s12">
-        <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
-        {% if node.level > 0  %}style="min-width: 98% !important;"{% endif %}>
+        <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
         <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
             data-delay="50"
@@ -182,7 +180,6 @@
     </div>
 </div>
 {% endif %}
-</div>
 </div>
 </div>
 {% endfor %}
