--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -12,9 +12,7 @@
 {% endif %}
 {% for node in publications %}
     <div class="row">
-        <div class="col s12">
-            <div class="col s12 wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}"
-                 {% if node.level > 0 and node.level < 3 %}style="min-width: 98% !important;"{% endif %}>
+            <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
                 <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
                   data-delay="50"
@@ -260,7 +258,6 @@
                 </div>
             </div>
         </div>
-    </div>
 {% endfor %}
 <script>
     $(document).ready(function () {
