--- a/skyfolk/templates/groups/ajax_load_group_replies.html
+++ b/skyfolk/templates/groups/ajax_load_group_replies.html
@@ -6,8 +6,7 @@
 {% load static %}
     {% for node in publications %}
         <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
-            <div class="col s12">
-                <div class="col s12 wrapper"
+                <div class="wrapper"
                      {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
@@ -206,7 +205,6 @@
                     {% endif %}
                 </div>
             </div>
-        </div>
     {% endfor %}
 <script>
     $(document).ready(function () {
