--- a/skyfolk/templates/groups/comentarios_entries.html
+++ b/skyfolk/templates/groups/comentarios_entries.html
@@ -7,8 +7,7 @@
 <div id="list-publications" class="infinite-container">
     {% for node in publications %}
         <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
-            <div class="col s12">
-                <div class="col s12 wrapper"
+                <div class="wrapper"
                      {% if node.level > 0 %}style="min-width: 98% !important;"{% endif %}>
                     <div class="box">
             <span id="check-{{ node.pk }}" class="top-options zoom-pub tooltipped" data-position="bottom"
@@ -201,7 +200,6 @@
                     {% endif %}
                 </div>
             </div>
-        </div>
     {% endfor %}
 </div>
 {% if publications.has_next %}
