+ Issue callback servicios ok + Issue boton de cerrar mas grande ok

--- a/notifications/templates/notifications/list.html
+++ b/notifications/templates/notifications/list.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=3, minimum-scale=0.5">
     <link rel="stylesheet" href="{% static "css/notifications.css" %}" type="text/css" media="all"
           onload="if(media!='all')media='all'">
-    {% block title %} <title>Notificaciones - {{ request.user }}.</title> {% endblock %}
+    {% block title %} <title>Skyfolk // Notificaciones - {{ request.user }}.</title> {% endblock %}
 {% endblock %}
 {% block content %}
     <div class="container">
