--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -174,7 +174,7 @@ Base para la interfaz en comun de todos los usuarios.
         <table class="responsive-table highlight modal-table" summary="Atajos para acciones comunes.">
             <caption class="hide-on-med-and-down atajos-title">
                 <p>Atajos de teclado</p>
-                <i class="material-icons close-shortcuts">remove</i>
+                <i class="material-icons close-shortcuts">close</i>
             </caption>
             <thead>
                 <tr class="acc-atajos">
