--- a/skyfolk/templates/account/card-user.html
+++ b/skyfolk/templates/account/card-user.html
@@ -118,7 +118,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
         </div>
         <div class="col s12 m12 l10 offset-l1 trofeos">
             <div class="row">
-                <span id="close-trofeos" class="material-icons right">remove</span>
+                <span id="close-trofeos" class="material-icons right">close</span>
                 <h3 class="trofeos-title">Logros de {{ user_profile.username }}</h3>
             </div>
             <div class="row">
@@ -128,7 +128,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
         </div>
         <div class="col s12 m12 l10 offset-l1 grupos">
             <div class="row">
-                <span id="close-grupos" class="material-icons right">remove</span>
+                <span id="close-grupos" class="material-icons right">close</span>
                 <h3 class="grupos-title">Grupos de {{ user_profile.username }}</h3>
             </div>
             <div class="row">
@@ -138,7 +138,7 @@ Pin de usuario, donde se muestra avatar, nombre, imagen de perfil (en profile.ht
         </div>
         <div class="col s12 m12 l10 offset-l1 workspaces">
             <div class="row">
-                <span id="close-workspaces" class="material-icons right">remove</span>
+                <span id="close-workspaces" class="material-icons right">close</span>
                 <h3 class="workspaces-title">Workspaces de {{ user_profile.username }}</h3>
             </div>
             <div class="row">
