--- a/skyfolk/templates/channels/new_notification.html
+++ b/skyfolk/templates/channels/new_notification.html
@@ -3,7 +3,7 @@
 
 <li class="collection-item avatar" data-id="{{ notification.id }}">
     <a onclick="AJAX_mark_read(this)" class="remove-notification material-icons"
-    data-notification="{{ notification.slug }}">remove</a>
+    data-notification="{{ notification.slug }}">clear</a>
     <div class="circle">
         {% avatar notification.actor %}
     </div>
