--- a/skyfolk/templates/emails/new_notification.html
+++ b/skyfolk/templates/emails/new_notification.html
@@ -1,6 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8"/>
+    <title>Skyfolk - Nueva notificación.</title>
+</head>
+<body>
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Tienes una nueva notificación.
 </p>
 <p>
     {{ description }}
 </p>
+</body>
+</html>
