--- a/skyfolk/templates/account/notification-right-menu.html
+++ b/skyfolk/templates/account/notification-right-menu.html
@@ -19,7 +19,7 @@ Menu de notificaciones verticales
             {% for notification in user_notifications %}
                 <li class="collection-item avatar" data-id="{{ notification.id }}">
                     <a onclick="AJAX_mark_read(this)" class="remove-notification material-icons"
-                       data-notification="{{ notification.slug }}">remove</a>
+                       data-notification="{{ notification.slug }}">clear</a>
                     <div class="circle">
                         {% avatar notification.actor %}
                     </div>
