--- a/user_guide/templates/user_guide/window.html
+++ b/user_guide/templates/user_guide/window.html
@@ -8,7 +8,7 @@
 
     <div class="django-user-guide-mask">
         <div class="django-user-guide-window row">
-            <div class="django-user-guide-close-div">x</div>
+            <div class="django-user-guide-close-div"><i class="material-icons">close</i></div>
 
             <div class="col s12 django-user-guide-html-wrapper flow-text">
                 {{ html|safe }}
@@ -19,7 +19,7 @@
                 <div class="right django-user-guide-window-nav">
                     <button class="django-user-guide-btn django-user-guide-back-btn">&larr; Atrás</button>
                     <button class="django-user-guide-btn django-user-guide-next-btn">Siguiente &rarr;</button>
-                    <button class="waves-effect waves-light btn green django-user-guide-btn django-user-guide-done-btn">Hecho</button>
+                    <button class="waves-effect waves-light btn blue django-user-guide-btn django-user-guide-done-btn">Hecho</button>
                 </div>
             </div>
         </div>
