+ HTML en correo electronico

--- a/skyfolk/templates/emails/new_notification.html
+++ b/skyfolk/templates/emails/new_notification.html
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8"/>
-    <title>Skyfolk - Nueva notificación.</title>
-</head>
-<body>
 <p>
     ¡Hola <b>{{ to_user }}</b>! - Tienes una nueva notificación.
 </p>
 <p>
-    {{ description }}
+    {{ description|safe }}
 </p>
-</body>
-</html>
