--- a/skyfolk/templates/services/services.html
+++ b/skyfolk/templates/services/services.html
@@ -4,107 +4,105 @@
 {% load django_th_extras %}
 {% block filter_trigger %}
 {% block title %}<title>Skyfolk // Mis servicios{% comment %}{% trans "My Services" %}{% endcomment %}</title>{% endblock %}
+{% block extra-css %}
+    <style>
+        .card-image img {
+            max-height: 250px;
+        }
+    </style>
+{% endblock %}
 {% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                {% if user.is_authenticated %}
-                    <div class="row">
-                        <h2 class="center">Mis servicios</h2>
+<div class="container">
+    <div class="row">
+        <div class="col s12">
+            {% if user.is_authenticated %}
+            <div class="row">
+                <h2 class="center">Mis servicios</h2>
+            </div>
+            {% if services_list %}
+            <div class="row">
+                <h3>Servicios activos</h3>
+                {% for service in services_list %}
+                <div class="col s12 m3">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="{% if service.name.thumbnail %}{{ service.name.thumbnail.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}">
+                      <span class="card-title">{{ service.name|service_readable|safe|escape }}</span>
+                  </div>
+                  <div class="card-content">
+                      <p>{{ service.name.description }}</p>
+                  </div>
+                  <div class="card-action">
+                      {% if service.name.auth_required == True %}
+                      <a class="waves-effect waves-light btn white blue-text"
+                      role="button"
+                      href="{% url 'renew_service' service.name.id %}"
+                      title="Renovar servicio"><span
+                      class="material-icons">autorenew</span></a>
+                      {% endif %}
+                      <a class="waves-effect waves-light btn white black-text"
+                      role="button"
+                      href="{% url 'edit_service' service.id %}"
+                      title="Editar servicio"><span
+                      class="material-icons">edit</span></a>
+                      <a class="waves-effect waves-light btn white orange-text"
+                      role="button"
+                      href="{% url 'service_related_triggers_switch_to' service.pk 'off' %}"
+                      title="Desactivar todos los widgets de este servicio"><span
+                      class="material-icons">pause_circle_filled</span></a>
+                      <a class="waves-effect waves-light btn white green-text"
+                      role="button"
+                      href="{% url 'service_related_triggers_switch_to' service.pk 'on' %}"
+                      title="Activar todos los widgets de este servicio"><span
+                      class="material-icons">play_circle_filled</span></a>
+                      <a class="waves-effect waves-light btn white red-text" role="button"
+                      href="{% url 'delete_service' service.id %}"
+                      title="Eliminar este servicio"><span
+                      class="material-icons">remove</span></a>
+                      <div class="row">
+                        <span><i class="material-icons">done</i></span>
+                        <span>{{ service.counter_ok }} ejecuciones satisfactorias</span>
+                        -
+                        <span><i class="material-icons">error</i></span>
+                        <span>{{ service.counter_ko }} errores</span>
                     </div>
-                    {% if services_list %}
-                        <div class="row">
-                            <h3>Servicios activos</h3>
-                            {% for service in services_list %}
-                                <div class="col m4">
-                                    <div class="card z-depth-2 thumbnail">
-                                        <div class="row">
-                                            <div class="col s12">
-                                                <h4 class="tooltipped" data-position="bottom" data-delay="50"
-                                                    data-tooltip="{{ service.name.description }}"
-                                                    data-toggle="tooltip" title="{{ service.name.description }}">
-                                                    {{ service.name|service_readable|safe|escape }}</h4>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col s12">
-                                                <p>
-                                                    {% if service.name.auth_required == True %}
-                                                        <a class="waves-effect waves-light btn white blue-text"
-                                                           role="button"
-                                                           href="{% url 'renew_service' service.name.id %}"
-                                                           title="Renovar servicio"><span
-                                                                class="material-icons">autorenew</span></a>
-                                                    {% endif %}
-                                                    <a class="waves-effect waves-light btn white black-text"
-                                                       role="button"
-                                                       href="{% url 'edit_service' service.id %}"
-                                                       title="Editar servicio"><span
-                                                            class="material-icons">edit</span></a>
-                                                    <a class="waves-effect waves-light btn white orange-text"
-                                                       role="button"
-                                                       href="{% url 'service_related_triggers_switch_to' service.pk 'off' %}"
-                                                       title="Desactivar todos los widgets de este servicio"><span
-                                                            class="material-icons">pause_circle_filled</span></a>
-                                                    <a class="waves-effect waves-light btn white green-text"
-                                                       role="button"
-                                                       href="{% url 'service_related_triggers_switch_to' service.pk 'on' %}"
-                                                       title="Activar todos los widgets de este servicio"><span
-                                                            class="material-icons">play_circle_filled</span></a>
-                                                    <a class="waves-effect waves-light btn white red-text" role="button"
-                                                       href="{% url 'delete_service' service.id %}"
-                                                       title="Eliminar este servicio"><span
-                                                            class="material-icons">remove</span></a>
-                                                </p>
-                                            </div>
-                                            <div class="row"></div>
-                                            <div class="col s12">
-                                                <p>
-                                                    <span><i class="material-icons">done</i></span>
-                                                    <span>{{ service.counter_ok }} ejecuciones satisfactorias</span>
-                                                    -
-                                                    <span><i class="material-icons">error</i></span>
-                                                    <span>{{ service.counter_ko }} errores</span>
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                    <div class="divider"></div>
-                    {% if service_list_remaining %}
-                        <div class="row">
-                            <h3>Servicios disponibles</h3>
-                            {% for service in service_list_remaining %}
-                                <div class="col m3 card">
-                                    <a class="thumbnail" title="add this service"
-                                       href="{% url 'add_service' service.name %}">
-                                        <h4 data-toggle="tooltip" title="{{ service.description }}">
-                                            {{ service|service_readable|safe|escape }}
-                                        </h4>
-                                        <p>
-                                            <span class="glyphicon glyphicon-repeat icon-white"></span>
-                                            <span class="glyphicon glyphicon-pencil icon-white"></span>
-                                            <span class="glyphicon glyphicon-off icon-white"></span>
-                                            <span class="glyphicon glyphicon-off icon-white"></span>
-                                            <span class="glyphicon glyphicon-trash icon-white"></span>
-                                        </p>
-                                    </a>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                {% endif %}
+                </div>
             </div>
         </div>
+        {% endfor %}
     </div>
-    <script>
-        $(document).ready(function () {
-            $('.tooltipped').tooltip({delay: 50});
-        });
+    {% endif %}
+    <div class="divider"></div>
+    {% if service_list_remaining %}
+    <div class="row">
+        <h3>Servicios disponibles</h3>
+        {% for service in service_list_remaining %}
+        <div class="col s12 m3">
+      <div class="card">
+        <div class="card-image">
+          <img src="{% if service.thumbnail %}{{ service.thumbnail.url }}{% else %}{% static "img/nuevo_back.png" %}{% endif %}">
+          <span class="card-title">{{ service|service_readable|safe|escape }}</span>
+        </div>
+        <div class="card-content">
+          <p>{{ service.description }}</p>
+        </div>
+        <div class="card-action">
+          <a href="{% url 'add_service' service.name %}">Añadir</a>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+</div>
+{% endif %}
+{% endif %}
+</div>
+</div>
+</div>
+<script>
+$(document).ready(function () {
+    $('.tooltipped').tooltip({delay: 50});
+});
 
-    </script>
+</script>
 {% endblock %}
